--- a/letter-markup/index.html
+++ b/letter-markup/index.html
@@ -80,9 +80,9 @@
 <p>You can find more information about <a href="http://www.example.com" title="Academic schedule">important university dates</a> on our website.</p>
 
 
-<h2><strong>Subjects of study</strong></h2>
+<h2>Subjects of study</h2>
 
-<p>At the Awesome Science Faculty, we have a pretty open-minded research facility — as long as the subjects fall somewhere in the realm of science and technology. You seem like an intelligent, dedicated researcher, and just the kind of person we'd like to have on our team. Saying that, of the ideas you submitted we were most intrigued by are as follows, in order of priority:</p>
+<p><strong>At the Awesome Science Faculty</strong>, we have a pretty open-minded research facility — as long as the subjects fall somewhere in the realm of science and technology. You seem like an intelligent, dedicated researcher, and just the kind of person we'd like to have on our team. Saying that, of the ideas you submitted we were most intrigued by are as follows, in order of priority:</p>
 
 <ol>
     <li>Turning H<sub>2</sub>O into wine, and the health benefits of Resveratrol (C<sub>14</sub>H<sub>12</sub>O<sub>3</sub>.)</li>
@@ -93,7 +93,7 @@
 <p>So please can you provide more information on each of these subjects, including how long you'd expect the research to take, required staff and other resources, and anything else you think we'd need to know? Thanks.</p>
 
 
-<h2><strong>Exotic dance moves</strong></h2>
+<h2>Exotic dance moves</h2>
 
 <p>Yes, you are right! As part of my post-doctorate work, I did study exotic tribal dances. To answer your question, my favourite dances are as follows, with definitions:</p>
 
@@ -111,6 +111,6 @@
 <p>Yours sincerely,</p>
 <p><abbr title="Doctor">Dr</abbr="Doctor"> Eleanor Gaye</p>
 
-<p>University of Awesome motto: <q>Be awesome to each other.</q> -- <cite>Bill S Preston, <abbr title="Esquire">Esq</abbr></cite></p>
+<p><strong>University of Awesome mott</strong>o: <q>Be awesome to each other.</q> -- <cite>Bill S Preston, <abbr title="Esquire">Esq</abbr></cite></p>
     </body>
 </html>
