--- a/wanted-poster/index.html
+++ b/wanted-poster/index.html
@@ -6,7 +6,7 @@
         <meta name="author" content="Nick Lam">
         
 <!-- Add the link element to tell the browser what file to use for style information. -->
-        <link rel="styleshee" type="text/cs" href="css/style.css"
+        <link rel="stylesheet" type="text/css" href="css/style.css">
         <title>Wanted | Jame Markus</title>
     </head>
     <body>
